# Doctor-conferences-email-generator

./: README.md  email_log.txt  output_research.md  pyproject.toml
src/ws/: crew.py  emailids.xlsx  main.py
src/ws/config/: agents.yaml  tasks.yaml
tests/: emailtest.py  excelemail.py  excelget.py
